--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/dinedivine
+MONGO_URI=mongodb+srv://chepuribhavani12:DB5258@cluster0.p0b3gf2.mongodb.net/?retryWrites=true&w=majority&appName=cluster0
 JWT_SECRET=your-super-secret-key
 
